[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/just-breathe-font/JustBreatheObliqueone-L7lG.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Labels/Labels.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 130
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 1 )

[node name="Labels" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Shift" type="Label" parent="."]
margin_left = 336.0
margin_top = 280.0
margin_right = 650.0
margin_bottom = 410.0
custom_fonts/font = SubResource( 1 )
text = "Shift:"

[node name="Player_shift" type="Label" parent="."]
margin_left = 744.0
margin_top = 272.0
margin_right = 1105.0
margin_bottom = 402.0
custom_colors/font_color = Color( 0.960784, 0.968627, 0.0588235, 1 )
custom_fonts/font = SubResource( 1 )
text = "Player"

[node name="Score" type="Label" parent="."]
margin_left = 696.0
margin_top = 408.0
margin_right = 1061.0
margin_bottom = 538.0
custom_colors/font_color = Color( 0.109804, 0.741176, 0.866667, 1 )
custom_fonts/font = SubResource( 2 )
text = "Score:"

[node name="Player1" type="Label" parent="."]
margin_left = 328.0
margin_top = 512.0
margin_right = 693.0
margin_bottom = 642.0
custom_colors/font_color = Color( 0.686275, 0.698039, 0.698039, 1 )
custom_fonts/font = SubResource( 2 )
text = "Player1:"

[node name="Score_player1" type="Label" parent="."]
margin_left = 672.0
margin_top = 512.0
margin_right = 1037.0
margin_bottom = 642.0
custom_colors/font_color = Color( 0.109804, 0.741176, 0.866667, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Player2" type="Label" parent="."]
margin_left = 928.0
margin_top = 512.0
margin_right = 1293.0
margin_bottom = 642.0
custom_colors/font_color = Color( 0.686275, 0.698039, 0.698039, 1 )
custom_fonts/font = SubResource( 2 )
text = "Player2:"

[node name="Score_player2" type="Label" parent="."]
margin_left = 1272.0
margin_top = 512.0
margin_right = 1637.0
margin_bottom = 642.0
custom_colors/font_color = Color( 0.109804, 0.741176, 0.866667, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
